chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pypi
  annotations:
    cert-manager.io/cluster-issuer: zerossl
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-rotation-policy: Always
    cert-manager.io/issue-temporary-certificate: "false"
spec:
  rules:
    - host: pypi-local.bjoernpetersen.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pypi
                port:
                  name: http
    - host: pypi-direct.bjoernpetersen.net
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pypi
                port:
                  name: http
  tls:
    - secretName: tls-certificate
      hosts:
        - pypi-direct.bjoernpetersen.net
        - pypi-local.bjoernpetersen.net
